backoffice-api/k8s/backoffice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backoffice-deployment
    namespace: backoffice
    labels:
        app: backoffice
        tier: frontend
spec:
    replicas: 3
    selector:
        matchLabels:
            app: backoffice
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: backoffice
                tier: frontend
        spec:
            containers:
                - image: gcr.io/alfred-302520/backoffice-api:0.9.2
                  #command: ["sleep 600"]
                  imagePullPolicy: IfNotPresent
                  name: backoffice
                  resources: 
                    limits:
                      cpu: 1000
                      memory: 1000Mi
                    requests:
                      cpu: 300m
                      memory: 300Mi               
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 10
