backoffice-api/k8s/backoffice-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: backoffice
    namespace: backoffice
    labels:
        app: backoffice
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 3500
    selector:
        app: backoffice
        tier: frontend
