backoffice-api/k8s/backoffice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: backoffice-ssl-ingress
    namespace: backoffice
    annotations:
        kubernetes.io/ingress.global-static-ip-name: backoffice-ssl-ingress-ip
        networking.gke.io/managed-certificates: backoffice-ssl-certificate
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        kubernetes.io/ingress.allow-http: "false"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
        ingress.kubernetes.io/proxy-connect-timeout: "6000"
        ingress.kubernetes.io/proxy-send-timeout: "6000"
        ingress.kubernetes.io/proxy-read-timeout: "6000"
spec:
    rules:
        - host: backofficeapi.alfreddelivery.com
          http:
              paths:
                  - backend:
                        serviceName: backoffice
                        servicePort: 3000
